# sampleMatmul

./: CMakeLists.txt  README.md  simpleMatmul.cpp
